<resources>
    <string name="app_name">MojaLoop-app Merchant</string>
    <string name="header_terms_conditions">Mobile Banking App Terms and Conditions</string>
    <string name="definition_header">Definition</string>
    <string name="definition_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="applicability_header">Applicability</string>
    <string name="applicability_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="digital_Sercice_header">Digital App Service</string>
    <string name="digital_Sercice_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="digital_Accessibility_header">Digital App Accessibility</string>
    <string name="digital_Accessibility_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="unauthorized_header">Unauthorized</string>
    <string name="unauthorized_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="maintenance_header">Maintenance of  Sufficient Balance</string>
    <string name="maintenance_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="fund_Transfer_header">Fund Transfer through Digital App</string>
    <string name="fund_Transfer_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="acknowledges_header">The Customer Acknowledges</string>
    <string name="acknowledges_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="authority_header">Authority  to this Digital App</string>
    <string name="authority_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="header">Create Alias for your  account from options given below:</string>
    <string name="otpHeader">A one-time password (OTP) has been sent to your mobile number. Please enter the six digit code to verify your identity</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_tremAndCondition">I have read and accepted terms and conditions </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logintext">Login</string>
    <string name="logouttext">Logout</string>
    <string name="siguptext">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="registerationnot">Not registered yet?</string>
    <string name="welcome">Welcome</string>
    <string name="top_up">TopUp</string>
    <string name="available_balance">Available Balance</string>
    <string name="yes">Yes</string>
    <string name="actual_Balance">Actual Balance</string>
    <string name="merchant_Name">Merchant Name</string>
    <string name="merchant_alias">Merchant Alias</string>
    <string name="order_details">Order details</string>
    <string name="congratulations">Congratulations!</string>
    <string name="create_account">Create account</string>
    <string name="form_account">From account</string>
    <string name="confirm_information_details">Confirm information details</string>
    <string name="step">Step</string>
    <string name="step_1">Step 1/2</string>
    <string name="personal_Details">Personal Details</string>
    <string name="name_and_surname">Name and surname</string>
    <string name="phone_number"> Phone Number </string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="next">Next</string>
    <string name="i_read_and_accepted_terms_conditions">I read and accepted terms and conditions </string>
    <string name="bank_account">Bank Account</string>
    <string name="institution">Institution</string>
    <string name="re_enter_account_number">Re enter account number</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="transfer">Transfer</string>
    <string name="please_review_the_data_below">Please review the data below</string>
    <string name="account_number">Account Number</string>
    <string name="reciever_Details">Receiver Details</string>
    <string name="reciever_alias">Receiver´s Alias</string>
    <string name="notes">Notes</string>
    <string name="create_username">Create username</string>
    <string name="create_password">Create password</string>
    <string name="user_data">User data</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="secret_question">Secret Question</string>
    <string name="select_secret_question">Select secret question</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="amount">Amount</string>
    <string name="re_amount">Re-Enter Amount</string>
    <string name="titelloading">Fetching account details</string>
    <string name="terms_and_Conditions">Terms and Conditions</string>
    <string name="opt_confirmation">OPT Confirmation OTP</string>
    <string name="otp_text">A one-time password (OTP) has been sent to your mobile number. Please enter the five digits code to verify your identity</string>
    <string name="didnt_receive_otp">Didn’t Receive OTP?</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="received_payment">Received Payment</string>
    <string name="sent_you">Sent you</string>
    <string name="see_more">See more</string>
    <string name="qr_pay">QR Pay</string>
    <string name="Payment">Payment</string>
    <string name="other_services">Other services</string>
    <string name="receiver_details">Receiver details</string>
    <string name="receiver_alias">Receiver Alias</string>
    <string name="username_pass_validation">You must Enter a valid Username and Password</string>
    <string name="username_validation">Invalid Username Length</string>
    <string name="pass_validation">Invalid Password Length </string>
    <string name="loading">Loading</string>
    <string name="transfer_seccessfull">Your transfer was successfuly submitted!</string>
    <string name="invalid_user_length">Invalid Username Length</string>
    <string name="lang_tv">Change language to</string>
    <string name="lang2_tv">Bahasa</string>
    <string name="prepare_order">Prepare Order</string>
    <string name="cash_in">Cash In / Out</string>
    <string name="na">N/A</string>
    <string name="add_to_payee">Add to payee List</string>
    <string name="marchant">MERCHANT</string>
</resources>