<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/layoutColor"
    android:orientation="vertical">
<!--    <ImageView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/ic_indonesian_flag"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:padding="20dp"-->
<!--        />-->
    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_coop_pay"/>

    <TextView
        android:id="@+id/merchettext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_header"
        android:textSize="30dp"
        android:textColor="@color/btncolor"
        android:padding="5dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/marchant"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_singleLineEllipsis="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/merchettext"
        android:hint="@string/username_hint"
        app:met_floatingLabel="highlight" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_userName"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_userName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-3dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPasswordLayout"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/button_bg"
        android:text="@string/logintext"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_below="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/forgot_pass"
        android:textAlignment="center"
        android:textColor="@color/btncolor" />

    <TextView
        android:id="@+id/not_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_above="@id/btn_signUp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/registerationnot"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_transparnt_bg"
        android:layout_alignParentBottom="true"
        android:text="@string/siguptext"
        android:textAllCaps="false"
        android:textColor="@color/btncolor"
        android:textSize="17dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/tv_forgot"
        android:padding="0dp">

        <TextView
            android:id="@+id/lbl_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_tv"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:visibility="invisible"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/lbl_lang2"
            android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/lbl_lang"
            android:text="@string/lang2_tv"
            android:visibility="invisible"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </RelativeLayout>
</RelativeLayout>