<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="@drawable/card_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_recievePaymentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:text="@string/received_payment"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_recievePaymentText"
            android:paddingLeft="20dp"
            android:visibility="gone"
            android:text="@string/na"/>

        <ImageView
            android:id="@+id/iv_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="20dp"
            android:src="@drawable/ic_cross"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_seeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/button_transparnt_bg"
            android:layout_marginRight="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/iv_cross"
            android:textColor="@color/btncolor"
            android:text="@string/see_more"/>

    </RelativeLayout>
</LinearLayout>